--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-*{
+* {
     padding: 0;
     margin: 0;
 }
-.sky{
-    background-image: url("background.jpg");
+
+.sky {
+    background-image: url("background.webp");
     background-repeat: repeat-x;
     background-size: cover;
     height: 90vh;
@@ -11,8 +12,9 @@
     position: absolute;
     /* animation: cloudMove 5s linear infinite; */
 }
-.tree{
-    background-image: url(trees.png);
+
+.tree {
+    background-image: url(trees.webp);
     background-repeat: no-repeat;
     /* background-size: ; */
     height: 100vh;
@@ -20,72 +22,71 @@
     position: absolute;
     bottom: 10vh;
 }
+
 body {
     overflow: hidden;
 }
-.track{
-    background-image: url('track.png');
-    background-repeat:repeat-x;
+
+.track {
+    background-image: url('track.webp');
+    background-repeat: repeat-x;
     position: absolute;
     bottom: -10vh;
     height: 22vh;
     width: 1000vw;
-    animation: MoveCar .8s linear  infinite;
-    
+    animation: MoveCar .8s linear infinite;
 }
-.car{
-    background-image: url('car_body.png');
+
+.car {
+    background-image: url('car_body.webp');
     background-repeat: repeat-x;
     background-size: cover;
     height: 100px;
     width: 380px;
     position: relative;
-   top: 69vh;
-   left: 250px;
-   
-   animation-delay: 4s;
-
-   
+    top: 69vh;
+    left: 250px;
+    animation-delay: 4s;
 }
-.wheel{
+
+.wheel {
     height: 25px;
     width: 78px;
     position: absolute;
-    
-
-    
 }
-.wheel1 img{
+
+.wheel1 img {
     top: 40px;
     left: 48px;
     height: 10vh;
     position: absolute;
-    animation: wheelRotate .6s linear  infinite ;
-   
-    
+    animation: wheelRotate .6s linear infinite;
 }
-.wheel2 img{
+
+.wheel2 img {
     top: 43px;
     left: 238px;
     height: 10.3vh;
     position: absolute;
-    animation: wheelRotate .6s linear  infinite ;
-
-    
+    animation: wheelRotate .6s linear infinite;
 }
+
+
 /* .wheel2{
 
 } */
 
-@keyframes wheelRotate{
-    100%{transform: rotate(360deg);}
-}
-@keyframes MoveCar{
-    100%{
-        transform: translateX(-500px);
+@keyframes wheelRotate {
+    100% {
+        transform: rotate(360deg);
     }
 }
 
+@keyframes MoveCar {
+    100% {
+        transform: translateX(-500px);
+    }
+}
 
 
 /* @keyframes Flycar{
